test/corpus/advanced.txt
==================
Subblock with brace content
==================

%scf
  rotate {1 2 90.0}
  rotate {3, 4, 45.0}
end

---

(source_file
  (input_block
    (input_title
      (word))
    (input_body
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (brace_block
              (brace_content
                (brace_value
                  (float))
                (brace_value
                  (float))
                (brace_value
                  (float)))))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (brace_block
              (brace_content
                (brace_value
                  (float))
                (brace_value
                  (float))
                (brace_value
                  (float))))))))))

==================
Nested subblocks
==================

%casscf 
  nel 6
  norb 6
  # mandatory
  CIStep ICE
  
  # optional starting references for ICE 
  # using the refs sub-block
  # refs {2 2 ...} end
  
  # optional refined settings
  # with keywords as in the %ice block
  ci
     ICEType CFGs   # select ICE expansion type: 
                    # 'CFGs' (default), 'DETS' or 'CSFs'
     TGen 1e-4      # controls accuracy (default = 1e-4)
     TVar 1e-11     # default = 1e-7 * TGen
     MaxIter 100    # number of allowed cycles (default = 64)
     
     # Scratch space dimension (number of singles/double excitations per CSF) 
     # If scratch is too small, the program may crash.
     CIBufferLength 10240 
  end
end

---

(source_file
  (input_block
    (input_title
      (word))
    (input_body
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (comment)
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (word))))
      (comment)
      (comment)
      (comment)
      (comment)
      (comment)
      (subblock
        (word)
        (input_body
          (kv_pair
            (input_key
              (word))
            (value
              (value_atom
                (word))))
          (comment)
          (comment)
          (kv_pair
            (input_key
              (word))
            (value
              (value_atom
                (float))))
          (comment)
          (kv_pair
            (input_key
              (word))
            (value
              (value_atom
                (float))))
          (comment)
          (kv_pair
            (input_key
              (word))
            (value
              (value_atom
                (float))))
          (comment)
          (comment)
          (comment)
          (kv_pair
            (input_key
              (word))
            (value
              (value_atom
                (float)))))))))

==================
Full ORCA input example
==================

! cc-pvdz extremescf nofrozencore

%casscf
  norb 6
  mult 3
  gtol 1e-8
end

%maxcore 5000

* xyz 0 1
  C    0.0 0.0 0.0
  C   20.0 0.0 0.0
*

---

(source_file
  (simple_line
    (arg)
    (arg)
    (arg))
  (input_block
    (input_title
      (word))
    (input_body
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))))
  (input_line
    (input_title
      (word))
    (float))
  (geom_block
    (integer)
    (integer)
    (xyz_line
      (element)
      (coord_value
        (float))
      (coord_value
        (float))
      (coord_value
        (float)))
    (xyz_line
      (element)
      (coord_value
        (float))
      (coord_value
        (float))
      (coord_value
        (float)))))

==================
CASSCF with PTMethod and subblock
==================

%casscf
  nel     6
  norb    6

  # fully internally contracted
  PTMethod FIC
  PTSettings
    ishift    0.0     # imaginary shift
    rshift    0.0     # real shift
    IPEAshift 0.0
  end
end

---

(source_file
  (input_block
    (input_title
      (word))
    (input_body
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (comment)
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (word))))
      (subblock
        (word)
        (input_body
          (kv_pair
            (input_key
              (word))
            (value
              (value_atom
                (float))))
          (comment)
          (kv_pair
            (input_key
              (word))
            (value
              (value_atom
                (float))))
          (comment)
          (kv_pair
            (input_key
              (word))
            (value
              (value_atom
                (float)))))))))

==================
ICE block with refs subblock
==================

%ice 
  nel 8
  norb 23
  nroots 1
  tvar 1e-11
  tgen 1e-04
  etol 1e-06
  # spatial sym (only supported for ICEType = CFGs)
  irrep 0
  refs 
    { 2 2 1 2 0 1 } 
  end
end

---

(source_file
  (input_block
    (input_title
      (word))
    (input_body
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (comment)
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (subblock
        (word)
        (input_body
          (raw_content
            (brace_block
              (brace_content
                (brace_value
                  (float))
                (brace_value
                  (float))
                (brace_value
                  (float))
                (brace_value
                  (float))
                (brace_value
                  (float))
                (brace_value
                  (float))))))))))

==================
Coords block with nested coords subblock
==================

%coords
 CTyp   xyz     # the type of coordinates = xyz or internal
 Charge 0       # the total charge of the molecule
 Mult   2       # the multiplicity = 2S+1
 Units  Angs    # the unit of length = angs or bohrs

  coords
     N   0  0  0
     N   0  0  1.098
  end
end

---

(source_file
  (input_block
    (input_title
      (word))
    (input_body
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (word))))
      (comment)
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (comment)
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (comment)
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (word))))
      (comment)
      (subblock
        (word)
        (xyz_line
          (element)
          (coord_value
            (float))
          (coord_value
            (float))
          (coord_value
            (float)))
        (xyz_line
          (element)
          (coord_value
            (float))
          (coord_value
            (float))
          (coord_value
            (float)))))))

==================
Internal coordinates (int format)
==================

* int 0 1
  C    0  0  0  0.0    0.0    0.0
  H    1  0  0  1.08   0.0    0.0  
  H    1  2  0  1.08  109.47   0.0
  H    1  2  3  1.08  109.47  120.0
*

---

(source_file
  (geom_block
    (integer)
    (integer)
    (int_line
      (element)
      connect1: (integer)
      connect2: (integer) 
      connect3: (integer)
      (coord_value
        (float))
      (coord_value
        (float))
      (coord_value
        (float)))
    (int_line
      (element)
      connect1: (integer)
      connect2: (integer)
      connect3: (integer) 
      (coord_value
        (float))
      (coord_value
        (float))
      (coord_value
        (float)))
    (int_line
      (element)
      connect1: (integer)
      connect2: (integer)
      connect3: (integer)
      (coord_value
        (float))
      (coord_value
        (float))
      (coord_value
        (float)))
    (int_line
      (element)
      connect1: (integer)
      connect2: (integer)
      connect3: (integer)
      (coord_value
        (float))
      (coord_value
        (float))
      (coord_value
        (float)))))

==================
Internal coordinates with variable references
==================

%paras
  r = 1.08;
  a = 109.47;
end

* int 0 1
  C    0  0  0  0.0    0.0    0.0
  H    1  0  0  {r}    0.0    0.0  
  H    1  2  0  {r}    {a}    0.0
  H    1  2  3  {r}    {a}   120.0
*

---

(source_file
  (input_block
    (input_title
      (word))
    (input_body
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))
      (kv_pair
        (input_key
          (word))
        (value
          (value_atom
            (float))))))
  (geom_block
    (integer)
    (integer)
    (int_line
      (element)
      connect1: (integer)
      connect2: (integer)
      connect3: (integer)
      (coord_value
        (float))
      (coord_value
        (float))
      (coord_value
        (float)))
    (int_line
      (element)
      connect1: (integer)
      connect2: (integer)
      connect3: (integer)
      (coord_value
        (variable_ref
          (variable_name
            (word))))
      (coord_value
        (float))
      (coord_value
        (float)))
    (int_line
      (element)
      connect1: (integer)
      connect2: (integer)
      connect3: (integer)
      (coord_value
        (variable_ref
          (variable_name
            (word))))
      (coord_value
        (variable_ref
          (variable_name
            (word))))
      (coord_value
        (float)))
    (int_line
      (element)
      connect1: (integer)
      connect2: (integer)
      connect3: (integer)
      (coord_value
        (variable_ref
          (variable_name
            (word))))
      (coord_value
        (variable_ref
          (variable_name
            (word))))
      (coord_value
        (float)))))
