test/corpus/geometry.txt
==================
Simple xyz geometry block
==================

* xyz 0 1
  C    0.0 0.0 0.0
  C   20.0 0.0 0.0
*

---

(source_file
  (geom_block
    (integer)
    (integer)
    (xyz_line (element) (coord_value (float)) (coord_value (float)) (coord_value (float)))
    (xyz_line (element) (coord_value (float)) (coord_value (float)) (coord_value (float)))))

==================
Xyz geometry with negative coordinates
==================

* xyz 0 1
  H   -1.0 -2.0 3.0
  O    0.0  1.0 0.0
*

---

(source_file
  (geom_block
    (integer)
    (integer)
    (xyz_line (element) (coord_value (float)) (coord_value (float)) (coord_value (float)))
    (xyz_line (element) (coord_value (float)) (coord_value (float)) (coord_value (float)))))

==================
Xyz geometry with variable references
==================

* xyz 0 1
  C    {r} 0.0 0.0
  C   20.0 {angle} {distance}
*

---

(source_file
  (geom_block
    (integer)
    (integer)
    (xyz_line (element) (coord_value (variable_ref (variable_name (word)))) (coord_value (float)) (coord_value (float)))
    (xyz_line (element) (coord_value (float)) (coord_value (variable_ref (variable_name (word)))) (coord_value (variable_ref (variable_name (word)))))))

==================
Xyz file reference
==================

* xyzfile 0 1 molecule.xyz

---

(source_file
  (geom_line
    (geom_line_types)
    (integer)
    (integer)
    (file)))

==================
Gzmt file reference
==================

* gzmtfile 0 1 molecule.gzmt

---

(source_file
  (geom_line
    (geom_line_types)
    (integer)
    (integer)
    (file)))

==================
Scientific notation coordinates
==================

* xyz 0 1
  C    1.23e-5 -2.45e-3 0.0
  H    1.0e-10  2.0e-2  3.14159
*

---

(source_file
  (geom_block
    (integer)
    (integer)
    (xyz_line (element) (coord_value (float)) (coord_value (float)) (coord_value (float)))
    (xyz_line (element) (coord_value (float)) (coord_value (float)) (coord_value (float)))))

==================
Geometry constraint parsing
==================

%geom constraints
{A 1 0 2 120.0 C}
{D 1 2 3 4 180.0 F}
end
end

---

(source_file
  (input_block
    (input_title
      (word))
    (input_body
      (subblock
        name: (word)
        (input_body
          (raw_content
            (brace_block
              (brace_content
                (constraint_content
                  (float)
                  (float)
                  (float)
                  (float)))))
          (raw_content
            (brace_block
              (brace_content
                (constraint_content
                  (float)
                  (float)
                  (float)
                  (float)
                  (float))))))))))
